fin seance,tp4 a termine